JSAI/error/src/test/resources/base/builtins_string-charat-err.js
var x = "foobar".charAt(6) === ""; 
print(x);


